feat: deploying to firebase

--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
-
+    {% comment %} <title>Welcome to Firebase Hosting</title> {% endcomment %}
+    <base href="https://summer-project-49c32.firebaseapp.com/">
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/9.1.2/firebase-app-compat.js"></script>
     <!-- include only the Firebase features as you need -->
